# blitz-windows

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Package.swift  README.md  package-lock.json  package.json
.github/workflows/: build.yml
Sources/BlitzApp/: AppCommands.swift  AppState.swift  BlitzApp.swift
Sources/BlitzCore/: IDBProtocol.swift  ProcessRunner.swift  ProjectMetadata.swift  SidecarProtocol.swift  SimctlClient.swift  SpringSimulator.swift  WDAClient.swift
Tests/: cicd-tests.sh
Tests/BlitzCoreTests/: CICDMigrationTests.swift  ProjectMetadataTests.swift  SimctlClientTests.swift  SpringSimulatorTests.swift
cross-platform/: ARCHITECTURE.md
cross-platform/android-companion/: build.gradle.kts  settings.gradle.kts
cross-platform/core/: package-lock.json  package.json  tsconfig.json
cross-platform/docs/: DEPLOYMENT.md
cross-platform/windows-controller/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json  (+1 more)
cross-platform/windows-controller/src-tauri/: Cargo.toml  tauri.conf.json
cross-platform/windows-controller/src-tauri/src/: adb.rs  companion_server.rs  emulator.rs  flutter.rs  gradle.rs  lib.rs  main.rs
docs/: app-store-submission-pipeline.md  cicd-migration.md  mcp-tools-approval-flow.md  swift-unified-toolbar.md  swift-view-lifecycle.md
scripts/: Entitlements.plist  asc-create-profile.sh  blitz-mcp-bridge.sh  build-pkg.sh  build-server.mjs  bundle.sh  deploy-pkg.sh
src/: AppCommands.swift  AppState.swift  BlitzApp.swift  BlitzPaths.swift  ProjectMetadata.swift
(+164 files in other folders)
